<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:visibility="visible"
    >

    <include
        android:id="@+id/ll_headerview"
        layout="@layout/heardview_layout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/conn_type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_headerview">

        <TextView
            android:id="@+id/tvType"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/test_type"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rg_test_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_stress_type_bt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:gravity="center_vertical"
                android:text="@string/rb_stress_type_bt"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb_stress_type_wifi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/type_wifi"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb_stress_type_screen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/type_screen"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb_stress_type_usb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/type_usb"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


            <RadioButton
                android:id="@+id/rb_stress_type_reopen_device"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/type_restart"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </RadioGroup>
    </LinearLayout>

    <View
        android:id="@+id/devider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/conn_type" />


    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/devider2">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/stess_device"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sp_stress_device"
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:prompt="@string/stess_device" />

        <TextView
            android:id="@+id/et.stress.device"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_stress_bind"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/test_device_bind"
            android:enabled="true"
            android:gravity="center"
            />


        <RadioGroup
            android:id="@+id/rg_ws_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rb_stress_ws_hollyos"
                android:id="@+id/rb_stress_ws_hollyos"
                android:visibility="gone"
                android:layout_marginStart="20dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rb_stress_ws_settings"
                android:visibility="gone"
                android:id="@+id/rb_stress_ws_settings"
                android:layout_marginStart="20dp"/>


        </RadioGroup>




    </LinearLayout>


    <View
        android:id="@+id/devider0"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/spinner_layout" />

    <LinearLayout
        android:id="@+id/ll_settings"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/devider0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_count"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_total_count"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:enabled="true"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/interval_time"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_intervals_time"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:text="12" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/current_time"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_current_time"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:maxLines="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/http_request"
            android:id="@+id/cb_stress_http"
            android:layout_marginStart="20dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cb_stess_usb"
            android:visibility="gone"
            android:id="@+id/cb_stress_usb"
            android:layout_marginStart="20dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cb_stress_poweron_startup"
            android:visibility="gone"
            android:id="@+id/cb_stress_poweron_startup"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <View
        android:id="@+id/devider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/ll_settings" />



    <LinearLayout
        android:id="@+id/ll_usb_type"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_bottom"
        app:layout_constraintTop_toBottomOf="@id/devider1">

        <ListView
            android:id="@+id/usb_listview"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:visibility="gone"/>



        <TextView
            android:id="@+id/tv_errror"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="200dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@id/ll_bottom" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">


        <Button
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:text="@string/start"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:text="@string/stop"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_clear_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:text="@string/clear_count"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
